Fixing the z-index of the navbar.

--- a/FRONT-END/css/PatientLoginPage.css
+++ b/FRONT-END/css/PatientLoginPage.css
@@ -74,6 +74,7 @@ dl, ol, ul {
     width: 90%;
     max-width: 1500px;
     margin: 0 auto;
+    z-index: 2;
 }
 
 .logo-image{
